# IMonitor

./: README.md
IMonitor-1.4.5/: ASCII.txt  CDR3_freq_dis.R  Cat_alignment_stat.pl  Cat_error_stat.pl  Change_combine_seq_id.pl  Change_mpcr_id.pl  Correct_seq_pcr_error.pl  Filter_adapter_lowqual_N.pl  Filter_for_correct.conserve.pl  Filter_for_correct.pl  Filter_for_correct_CDR3.conserve.pl  Filter_for_correct_CDR3.pl  Find_CDR3_by_conserve.pl  Get_summary_stat.pl  IMonitor.pl  Merge_filter_fa.pl  Merge_filter_fqtofa.V2.pl  Merge_filter_fqtofa.pl  README  R_draw_figure.pl  Re-alignment.doubleJ.pl  Re-alignment.pl  Single_read_FQ_tofa.pl  Split_fq_into_part.pl  Statistics.old.pl  Statistics.pl  Structural_analysis.pl  change_format.pl  creat_fa_for_weblogo.pl
IMonitor-1.4.5/R/: CDR3_freq_dis.R  CDR3_length_dis.R  Insert_size_dis.R  Mutation_dis.R  VJ_usage.R  (+6 more)
IMonitor-1.4.5/src/src/cope/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NOTE.txt  README  config.h  config.h.in  config.status  configure  configure.ac  cope
IMonitor-1.4.5/src/src/cope/.deps/: connect.Po  cross.Po  gzstream.Po  hashSet.Po  main.Po  seqKmer.Po
IMonitor-1.4.5/src/src/cope/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
IMonitor-1.4.5/src/src/cope/src/: Makefile  Makefile.am  Makefile.in  NEWS  NOTE.txt  connect.cpp  connect.h  cope  cross.cpp  cross.h  gzstream.cpp  gzstream.h  hashSet.cpp  hashSet.h  main.cpp  seqKmer.cpp  seqKmer.h
IMonitor-1.4.5/src/src/cope/src/.deps/: connect.Po  cross.Po  gzstream.Po  hashSet.Po  main.Po  seqKmer.Po
(+509 files in other folders)
